--- a/style.css
+++ b/style.css
@@ -46,17 +46,27 @@ nav a:hover {
 .profile-name {
 	letter-spacing: .75em;
 	text-transform: uppercase;
+	text-align: center;
+	margin: 1%;
 }
 
 .profile-text {
-
+	text-align: justify;
+	margin: 1% auto;
+	width: 75%;
 }
 
 .team-member {
-    width: 75%;
+    width: 50%;
     padding: 1em;
     background: darkgrey;
     margin: 1% auto;
+    display: flex;
+}
+
+.team-member div {
+	display: flex;
+	flex-direction: column;
 }
 
 .team-member a {
@@ -71,11 +81,11 @@ nav a:hover {
 
 .team-member img {
     margin: 1%;
-    float: left;
+    /*float: left;
     background-size: cover;
-    background-position: center;
-    max-width: 10%;
-    max-height: 10%
+    background-position: center;*/
+    width: 20%;
+    height: 20%
 }
 
 
