--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-	background: white;
 	font-family: sans-serif;
+	background: #000 url("http://i.imgur.com/1VB0xo0.jpg") 0 0;
 }
 
 header {
-	background: #202020;
+	background: rgba(32, 32, 32, .75);
 	padding: 1%;
 	margin: 1%;;
 }
@@ -59,7 +59,7 @@ nav a:hover {
 .team-member {
     width: 50%;
     padding: 1em;
-    background: darkgrey;
+    background: rgba(169, 169, 169, .75);
     margin: 1% auto;
     display: flex;
 }
