--- a/style.css
+++ b/style.css
@@ -100,10 +100,11 @@ footer > p {
 	padding: 0 5px 10px 5px;
 	width: 80%;
 }
-
+/*
 .nss-text {
-	display: inine-block;
-}
+	display: inline-block;
+}     */
+
 .footer-image {
 	max-width: 4%;
 	max-height: 4%;
