--- a/style.css
+++ b/style.css
@@ -102,10 +102,13 @@ nav a:hover {
 	border: 2px solid black;
 	padding: 10px 5px 0 5px;
 	background-color: rgba(255, 153, 0, .9);
+	display: flex;
+	flex-direction: column;
 }
 
 footer > p {
 	padding: 0 0 0 10px;
+	margin: 0 0 10px;
 }
 
 footer a {
@@ -114,7 +117,7 @@ footer a {
 
 #nss-info {
 	padding: 0 5px 10px 5px;
-	width: 80%;
+	width: 100%;
 }
 
 /*
