--- a/style.css
+++ b/style.css
@@ -79,10 +79,10 @@ nav a:hover {
     height: 20%;
 }
 
-.profile-name{
+/*.profile-name{
 	display: inline;
 	float: right;
-}
+}*/
 
 .footer {
 	border: 2px solid black;
@@ -112,4 +112,14 @@ footer a {
 	display: inline-block;
 	float: left;
 	padding: 0 10px 0 0;
+}
+
+@media screen and (max-width: 700px) {
+	.small-screen {
+		font-size: 50%;
+	}
+
+	h1 {
+		font-size: 100%;
+	}
 }
